force-app/main/default/objects/tdc_tsw__Drip_Campaign__c/tdc_tsw__Drip_Campaign__c.object-meta.xml
<CustomObject>
    <description>It is used for a series of messages- SMS/emails/voice drops /I-text that are sent, or “dripped,” in a predefined order at predefined intervals/actions.</description>
    <label>Drip Campaign</label>
    <nameField>
        <label>Drip Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drip Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>