force-app/main/default/objects/tdc_tsw__Drip_Campaign__c/fields/tdc_tsw__Keywords_to_Start__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Keywords_to_Start__c</fullName>
    <label>Keywords to Start</label>
    <type>TextArea</type>
</CustomField>