force-app/main/default/objects/tdc_tsw__Drip_Campaign__c/fields/tdc_tsw__Related_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Related_Object_Name__c</fullName>
    <label>Object Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>